--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,3 +11,15 @@
   color: #2c3e50;
   margin-top: 60px;
 }
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+li {
+  display: inline-block;
+  margin: 0 10px;
+}
+img {
+  width: 64px;
+  height: 64px;
+}
