--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,15 +11,18 @@
   color: #2c3e50;
   margin-top: 60px;
 }
+h1 {
+  margin-bottom: 2rem;
+}
 ul {
   list-style-type: none;
   padding: 0;
 }
 li {
   display: inline-block;
-  margin: 0 10px;
+  margin: 0 1.5rem;
 }
 img {
-  width: 64px;
-  height: 64px;
+  width: 2rem;
+  height: 2rem;
 }
