--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,13 +3,17 @@
 
 @import "{{ site.theme }}";
 
+html, body {
+  height: 100%;
+  display: grid;
+}
 .app {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #2c3e50;
-  margin-top: 60px;
+  margin: auto;
 }
 h1 {
   margin-bottom: 2rem;
